<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/return_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:scaleType="centerInside"
        android:src="@drawable/btn_backwards_black"
        android:elevation="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@color/bg_common_white"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/mvvm_im"
        app:layout_constraintLeft_toLeftOf="@+id/return_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/mvvm_im" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/ptr_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.yubin.im.widget.LoadStatusView
                    android:id="@+id/load_status_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:id_empty_image="@drawable/ic_svg_chat_empty_data"
                    app:id_empty_text="@string/tv_empty_chat_history"
                    app:status="empty" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/prtRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|top"
                    android:fadeScrollbars="true"
                    android:overScrollMode="never"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbarThumbVertical="@drawable/recyclerview_vertical_bar"
                    android:scrollbars="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <com.yubin.im.widget.RecyclerViewHeader
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:descendantFocusability="blocksDescendants"
                        android:orientation="vertical"
                        app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="6dp"
                            android:background="@drawable/chat_fragment_top_search_bg"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="6dp"
                                app:srcCompat="@drawable/ic_svg_light_search" />

                            <TextView
                                android:id="@+id/toolbarSearchTextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:hint="@string/tv_search"
                                android:textColorHint="#CBCBCB"
                                android:textSize="@dimen/text_size_14" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/chat_top_recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="92dp"
                            android:visibility="gone"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            android:background="#fafafa" />
                        <!--待处理消息显示-->
                        <LinearLayout
                            android:id="@+id/ll_pending_message_container"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:background="@color/white"
                            android:gravity="center_vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="14dp"
                                android:layout_height="14dp"
                                android:layout_marginStart="17dp"
                                android:layout_marginEnd="9dp"
                                app:srcCompat="@drawable/ic_svg_pending_message" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_read"
                                android:textColor="#A0A0A0"
                                android:textSize="13sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_pending_message_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:text="@string/zero"
                                android:textColor="@color/color_main_bule"
                                android:textSize="13sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:text="@string/tv_strip"
                                android:textColor="#A0A0A0"
                                android:textSize="13sp" />

                        </LinearLayout>
                    </LinearLayout>
                </com.yubin.im.widget.RecyclerViewHeader>

            </FrameLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>